# contrib-stats

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: watch.fish
src/: main.py
