[tool.poetry]
name = "contrib-stats"
version = "0.1.0"
description = ""
authors = ["k01e-01 <k01e.alm07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4.0"
toml = "^0.10.2"
python-dotenv = "^1.0.1"
rich = "^13.7.1"
pygithub = "^2.3.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pyright = "^1.1.363"
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
